syntax = "proto3";

option go_package = "../cache/pb";

package cache;

service Cache {
    rpc Store (StoreReq) returns (StoreResp) {
    }
    rpc Get (GetReq) returns (GetResp) {
    }
}

service Accounts {
    rpc GetByToken (GetByTokenReq) returns (GetByTokenResp) {
    }
}

message GetByTokenReq {
    string token = 1;
}

message GetByTokenResp {
    Account account = 1;
}

message Account {
    int64 max_cache_keys = 1;
}

message StoreReq {
    string key = 1;
    bytes val = 2;
    string account_token = 3;
}

message StoreResp {

}

message GetReq {
    string key = 1;
}

message GetResp {
    bytes val = 1;
}